# neural-networks-project-2

./: .gitignore  LICENSE  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pyright.yml  ruff.yml
models/: FPN.py  deeplabv3_model.py
notebooks/: data_exploration.ipynb
scripts/: filter.py  split.py
torch_datasets/: landcover_dataset.py  transforms.py
training/: checkpointing.py  dummy_criterion.py  dummy_model.py  loss.py  models.py  train.py  trainer.py
training/configs/: baseline.py  baseline_config.py  unet_config.py
