[project]
name = "neural-networks-project-1"
version = "0.1.0"
description = "Multimodal classification: text + image data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations[torch]>=2.0.8",
    "datasets>=4.8.4",
    "fvcore>=0.1.5.post20221221",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "umap-learn>=0.5.11",
    "wandb>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]

[tool.ruff]
line-length = 88
target-version = "py313"

# Enable basic checks and import sorting
lint.select = [
    "E",   # All errors
    "F",   # All pyflakes checks (including unused imports)
    "I",   # Import sorting checks
    "B",   # All flake8-bugbear checks
    "ANN", # All flake8-annotations checks
]

# Ignore line length violations.
lint.ignore = ["E501"]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files.
"__init__.py" = ["F401"]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "pyright>=1.1.408", "ruff>=0.15.5"]

[tool.pyright]
venvPath = "./.venv"
typeCheckingMode = "standard"
exclude = ["**/__pycache__", ".*", "**/.ipynb_checkpoints**"]
include = ["scripts/", "torch_datasets/", "notebooks/"]
pythonPlatform = "All"
pythonVersion = "3.13"
